Added interfaces, extensions, models

--- a/Waffles_Club/Waffles_Club/appsettings.json
+++ b/Waffles_Club/Waffles_Club/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionString": "Host=peabody28.com;Port=5894;Database=Waffles_Club;Username=pbd28;Password=57db4d8a-35bd-4177-a5aa-4625ff0b4d5e"
+  }
 }
