--- a/Waffles_Club/Waffles_Club.DataManagment/Waffles_Club.DataManagment.csproj
+++ b/Waffles_Club/Waffles_Club.DataManagment/Waffles_Club.DataManagment.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Implementations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.15" />
+  </ItemGroup>
+
 </Project>
