--- a/Waffles_Club/Waffles_Club.DataManagment/Waffles_Club.DataManagment.csproj
+++ b/Waffles_Club/Waffles_Club.DataManagment/Waffles_Club.DataManagment.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.15" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Waffles_Club.Data\Waffles_Club.Data.csproj" />
+  </ItemGroup>
+
 </Project>
