Added jwt tokens

--- a/Waffles_Club/Waffles_Club/appsettings.json
+++ b/Waffles_Club/Waffles_Club/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ConnectionString": "Host=peabody28.com;Port=5894;Database=Waffles_Club;Username=pbd28;Password=57db4d8a-35bd-4177-a5aa-4625ff0b4d5e"
+  },
+  "Jwt": {
+    "Secret": "superSecretKey@3459544885322144587",
+    "Issuer": "https://localhost:44300",
+    "Audience": "https://localhost:44300",
+    "Expire": 30,
+    "RefreshTokenExpirationDays": 30
   }
 }
