--- a/Waffles_Club/Waffles_Club.Service/Waffles_Club.Service.csproj
+++ b/Waffles_Club/Waffles_Club.Service/Waffles_Club.Service.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.15.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Waffles_Club.Data\Waffles_Club.Data.csproj" />
+  </ItemGroup>
+
 </Project>
