--- a/Waffles_Club/Waffles_Club/nlog.config
+++ b/Waffles_Club/Waffles_Club/nlog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Info"
-      internalLogFile="C:\5Sem\LuxeLooks\LuxeLooks\LuxeLooks\Logs\IternalLogs.txt">
+      internalLogFile="\Logs\IternalLogs.txt">
 
     <!-- enable asp.net core layout renderers -->
     <extensions>
@@ -13,11 +13,11 @@
     <!-- the targets to write to -->
     <targets>
         <!-- File Target for all log messages with basic details -->
-        <target xsi:type="File" name="allfile" fileName="C:\5Sem\LuxeLooks\LuxeLooks\LuxeLooks\Logs\LuxeLooks${shortdate}.log"
+        <target xsi:type="File" name="allfile" fileName="\Logs\WaffelsClub${shortdate}.log"
                 layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 
         <!-- File Target for own log messages with extra web details using some ASP.NET core renderers -->
-        <target xsi:type="File" name="ownFile-web" fileName="C:\5Sem\LuxeLooks\LuxeLooks\LuxeLooks\Logs\LuxeLooks-Own-${shortdate}.log"
+        <target xsi:type="File" name="ownFile-web" fileName="\Logs\WaffelsClub-Own-${shortdate}.log"
                 layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}| body: ${aspnet-request-posted-body}" />
 
         <target xsi:type="Console" name="console" />
