--- a/Waffles_Club/Waffles_Club.Service/Waffles_Club.Service.csproj
+++ b/Waffles_Club/Waffles_Club.Service/Waffles_Club.Service.csproj
@@ -17,4 +17,9 @@
     <ProjectReference Include="..\Waffles_Club.Data\Waffles_Club.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Implementations\" />
+    <Folder Include="Services\Interfaces\" />
+  </ItemGroup>
+
 </Project>
