FillingTypeService and WaffleTypeService added

--- a/Waffles_Club/Waffles_Club.Service/Waffles_Club.Service.csproj
+++ b/Waffles_Club/Waffles_Club.Service/Waffles_Club.Service.csproj
@@ -14,11 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Waffles_Club.DataManagment\Waffles_Club.DataManagment.csproj" />
     <ProjectReference Include="..\Waffles_Club.Data\Waffles_Club.Data.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\Implementations\" />
   </ItemGroup>
 
 </Project>
