--- a/Waffles_Club/Waffles_Club.Shared/Waffles_Club.Shared.csproj
+++ b/Waffles_Club/Waffles_Club.Shared/Waffles_Club.Shared.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
