--- a/Waffles_Club/Waffles_Club/appsettings.json
+++ b/Waffles_Club/Waffles_Club/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionString": "Host=peabody28.com;Port=5894;Database=Waffles_Club;Username=pbd28;Password=57db4d8a-35bd-4177-a5aa-4625ff0b4d5e"
+    "ConnectionString": "Host=localhost;Port=5432;Database=Waffles_Club;Username=postgres;Password=CHEATS145"
   },
   "Jwt": {
     "Secret": "superSecretKey@3459544885322144587",
